--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName = org.postgresql.Driver
-jdbc.url = jdbc:postgresql://localhost:5432/hibernate_crud
+jdbc.url = jdbc:postgresql://localhost:5432/spring_exam
 jdbc.username = postgres
-jdbc.password = sayid2003
+jdbc.password = diyor
 hibernate.dialect = org.hibernate.dialect.PostgresPlusDialect
 hibernate.show_sql = true
 hibernate.format_sql = true
