--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName = org.postgresql.Driver
-jdbc.url = jdbc:postgresql://localhost:5432/hibernate_crud
+jdbc.url = jdbc:postgresql://localhost:5432/postgres
 jdbc.username = postgres
 jdbc.password = 0887
 hibernate.dialect = org.hibernate.dialect.PostgresPlusDialect
